5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1601_2426.log
== TEST (2019-03-25 03:52:13) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:54:58) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
tempo = 
velocidade = tempo//km
-- ERROR:
File "XXXX", line 3
    tempo = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:55:32) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
velocidade = tempo//km
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    velocidade = tempo//km
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:57:02) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = tempo//km
print(distancia + quantidade de litros)
-- ERROR:
File "XXXX", line 4
    print(distancia + quantidade de litros)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 03:57:36) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = tempo//km
print(distancia, "+" ,quantidade de litros)
-- ERROR:
File "XXXX", line 4
    print(distancia, "+" ,quantidade de litros)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:10:23) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = velocidade * tempo
a = distancia / 12
print(distancia)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = distancia / 12
NameError: name 'distancia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:10:33) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = velocidade * tempo
a = distancia / 12
print(distancia)
print(a)
-- EXECUTION TIME:
0.151832
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 4, in <module>
    a = distancia / 12
NameError: name 'distancia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:03) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = velocidade * tempo
a = distancia / 12
print(round(distancia, 1))
print(round(a, 1))
-- EXECUTION TIME:
0.140767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2426/main.py", line 4, in <module>
    a = distancia / 12
NameError: name 'distancia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:12:09) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = velocidade * tempo
a = distancia / 12
print(round(distancia, 1))
print(round(a, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = distancia / 12
NameError: name 'distancia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:12:33) 
-- CODE:
tempo = float(input("tempo de viagem"))
velocidade = float(input("velocidade media"))
distacia = velocidade * tempo
a = distacia / 12
print(round(distacia, 1))
print(round(a, 1))
-- EXECUTION TIME:
0.194666
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
